--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
     <footer>
         &copy; 2024 Sample HTML Page. All rights reserved.
     </footer>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V3XR01LEC0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+          gtag('config', 'G-V3XR01LEC0');
+    </script>
 </body>
 </html>
 
